--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Gilroy';
+  font-family: 'poppins';
   src: url('../public/fonts/Gilroy-Regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
